--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/loveencounterflow/icql-dba-vnr#readme",
   "dependencies": {
     "cnd": "^9.2.2",
+    "datom": "^8.0.3",
     "guy": "^1.0.0",
     "hollerith-codec": "^3.1.1",
     "intertype": "^7.6.7",
