--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "cnd": "^9.2.2",
     "guy": "^1.0.0",
-    "hollerith-codec": "^3.1.1",
+    "hollerith": "^10.0.1",
     "intertype": "^7.6.7",
     "letsfreezethat": "^3.1.0"
   },
